--- a/buildSrc/src/main/groovy/demo.java-common-conventions.gradle
+++ b/buildSrc/src/main/groovy/demo.java-common-conventions.gradle
@@ -8,14 +8,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'javax:javaee-api:8.0.1'
-
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     testImplementation 'org.mockito:mockito-core:3.7.7'
     testRuntimeOnly 'org.mockito:mockito-core:3.7.7'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.7.7'
     testRuntimeOnly 'org.mockito:mockito-junit-jupiter:3.7.7'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
 }
 
 group 'com.tilmais'
